Streamlined (and fixed) Deployment (sometimes locked up); switched to Locking (from LockManager); added some performance improvements